[package]
name = "dataloader-bug"
version = "0.1.0"
authors = ["Samuel Hurel <samuel.hurel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dataloader = "0.8.0"
juniper = { git = "https://github.com/graphql-rust/juniper.git", branch = "master" }
log = "0.4.8"
tokio = { version = "0.2", features = ["macros", "stream", "time", "rt-core", "rt-threaded", "rt-util", "sync", "blocking"] }
warp = "0.2.1"
futures = "0.3.4"
lazy_static = "1.4.0"
serde_json = "1.0.48"
async-trait = "0.1.26"
pretty_env_logger = "0.4.0"
